fixed an overflow issue on the video header title

--- a/components/VideoHeader/VideoHeader.module.scss
+++ b/components/VideoHeader/VideoHeader.module.scss
@@ -105,15 +105,15 @@ $gradientColor: rgba(0, 0, 0, 0.5);
 
 .videoHeader > h1 {
   position: absolute;
+  width: 80vw;
   margin-top: 47.5vw;
   margin-left: 1vw;
-  color: var(--secondary-colour);
+  color: var(--dark-gray);
   font-size: 3.1vw;
   font-family: "Russo One";
   font-weight: 100;
 
   @media only screen and (max-width: 425px) {
-    width: 80vw;
     font-size: 5.2vw;
     font-weight: 200;
     text-align: left;
